--- a/ejercicio03/estilo.css
+++ b/ejercicio03/estilo.css
@@ -1,8 +1,17 @@
 body{
 	background: rgb(47, 149, 189);
 }
-h1,h2{
+h1{
+	color: red;
 	text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: bolder;
+}
+h2{
+	text-align: center;
+	font-family: 'Times New Roman', Times, serif;
+	color: aliceblue;
+	font-weight: bolder;
 }
 .alinear{
 	display: flex;
